--- a/data/minecraft/tags/damage_type/is_projectile.json
+++ b/data/minecraft/tags/damage_type/is_projectile.json
@@ -1,3 +1,11 @@
 {
-    "values":[]
+  "values": [
+    "minecraft:arrow",
+    "minecraft:trident",
+    "minecraft:mob_projectile",
+    "minecraft:unattributed_fireball",
+    "minecraft:fireball",
+    "minecraft:wither_skull",
+    "minecraft:thrown"
+  ]
 }
